<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/myDialog"
    android:padding="10dp"
    android:background="@color/blue_gray">

    <TextView
        style="@style/containerSubtitleLabelDraft"
        android:id="@+id/normServiceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/norm_service_title"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/normServiceTitle">
        <TextView
            style="@style/list_item_norm_text_white"
            android:id="@+id/normNameTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/norm_name"/>
        <TextView
            style="@style/list_item_norm_text_white"
            android:id="@+id/normCodeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/norm_code"/>
        <TextView
            style="@style/list_item_norm_text_white"
            android:id="@+id/normTimeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/norm_time"/>

        <Button
            android:id="@+id/closeNormBtn"
            style="@style/transparentButtonStyle"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:text="@string/close"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>

</RelativeLayout>