<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="650dp"
    android:theme="@style/myDialog"
    android:padding="10dp"
    android:background="@color/blue_gray"

    >

    <EditText
        android:id="@+id/servicesEt"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:hint="@string/service"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/light_gray"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/allServicesCb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:visibility="gone"
        android:text="@string/all_services"
        tools:ignore="RelativeOverlap" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/servicesRv"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/servicesEt"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/unitSpentLay"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/time"
        android:layout_below="@+id/servicesRv"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/unitSpentEt"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        /> </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_below="@+id/unitSpentLay"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:gravity="center">
        <Button
            android:id="@+id/servicesCancelBtn"
            style="@style/transparentButtonStyle"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:text="@string/cancel"
            android:layout_marginEnd="35dp"
            />
        <Button
            android:id="@+id/servicesChooseBtn"
            style="@style/transparentButtonStyle"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:text="@string/choose"
            android:layout_marginStart="35dp"
            />
    </LinearLayout>

</RelativeLayout>