<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/myDialog"
    android:padding="5dp"
    android:background="@color/blue_gray"
    android:layout_width="match_parent"
    android:layout_height="160dp">

    <TextView
        android:id="@+id/noSigDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:text="@string/dialog_no_sig_lbl"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/noSigDialogSpinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/noSigDialogTitle"/>


    <Button
        android:id="@+id/noSigDialogCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/transparent"
        android:text="@string/cancel"
        android:textColor="@color/gradient_center"
        android:layout_toStartOf="@+id/noSigDialogSubmitBtn"
        android:layout_below="@+id/noSigDialogSpinner"/>

    <Button
        android:id="@+id/noSigDialogSubmitBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/transparent"
        android:text="@string/submit"
        android:layout_alignParentEnd="true"
        android:textColor="@color/gradient_center"
        android:layout_below="@+id/noSigDialogSpinner"/>

</RelativeLayout>